Hexen II: Hammer of Thyrion

Development Progress	:
---------------------------

2011-12-22 (SVN):
    * cvar.c (Cvar_Set): Simplified coop and deathmatch cvars detection
      by replacing the name comparison by variable pointers' comparison.
    * quakedef.h: updated beta date stamp to 2011-12-22.

2011-12-21 (SVN):
    * hexenworld, sv_main.c: Reverted a part of yesterdays password cvars
      patch (what was I thinking..)
    * quakedef.h: updated beta date stamp to 2011-12-21.

2011-12-20 (SVN):
    * hexenworld, cl_main.c (CL_Rcon_f): No need for strlen() to detect an
      empty string.

2011-12-20 (SVN):
    * hexenworld, sv_main.c (SV_CheckVars): Changed to use the CVAR_CHANGED
      flags because the old pointer equality checks were never guaranteed
      to signal a change.

2011-12-20 (SVN):
    * cvar.h: Changed the cvar flags to bit shifts for easier maintaining.
      Added CVAR_CHANGED as a new flag.
    * cvar.c (Cvar_Set): Set the CVAR_CHANGED flag when changing a value,
      code elsewhere may make a use of it.

2011-12-20 (SVN):
    * Miscellaneous hexenworld server code cleanups:
    * sv_send.c (SV_FlushRedirect): Adjusted pointer.
    * sv_send.c (CON_Printf): Replaced strcat by q_strlcat.
    * sv_main.c (SVC_Log, SVC_RemoteCommand): Replaced strcat by q_strlcat.
    * sv_main.c (SV_SendBan, Master_Shutdown): Removed assignments and
      strcpy and made the data preinitialized and static.
    * sv_main.c (Master_Heartbeat): Reduced text buffer size from 2048 to
      32 which is more than enough. Replaced sprintf by q_snprintf.

2011-12-20 (SVN):
    * screen.c, gl_screen.c (SCR_DrawCenterString, Bottom_Plaque_Draw,
      Info_Plaque_Draw, Plaque_Draw): Adjusted the y coordinate by adding
      ((vid.height-200)>>1) and replaced all occurences of M_Print2() by
      M_Print() and M_DrawTextBox2() by M_DrawTextBox().
    * menu.c: Removed M_DrawTextBox2, M_Print2 and M_DrawCharacter2().