@@ -4,6 +4,7 @@ Development Progress	:
 ---------------------------
 
 2011-12-22 (SVN):
+    * cvar.h: Define the flags using 1U (unsigned), instead of simply 1.
     * cvar.c (Cvar_Set): Simplified coop and deathmatch cvars detection
       by replacing the name comparison by variable pointers' comparison.
     * quakedef.h: updated beta date stamp to 2011-12-22.
